--- a/EndlessRunnerGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/EndlessRunnerGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -59,8 +59,8 @@ ClientWindowHeight=480
 ServerMapNameOverride=
 AdditionalServerGameOptions=
 AdditionalLaunchOptions=
-MultipleInstanceLastHeight=0
-MultipleInstanceLastWidth=0
+MultipleInstanceLastHeight=720
+MultipleInstanceLastWidth=1280
 LastExecutedLaunchDevice=WindowsNoEditor@DESKTOP-MQBCFOF
 LastExecutedLaunchName=DESKTOP-MQBCFOF
 LastExecutedPIEPreviewDevice=
@@ -72,6 +72,7 @@ LastLevel=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
 
 [AssetEditorManager]
 CleanShutdown=False
+OpenAssetsAtExit=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap.ThirdPersonExampleMap:PersistentLevel.ThirdPersonExampleMap
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -143,5 +144,60 @@ ThirdPersonCharacter_C.Replication=True
 ThirdPersonCharacter_C.Input=True
 ThirdPersonCharacter_C.Actor=True
 ThirdPersonCharacter_C.Materials=True
+ThirdPersonExampleMap_C.Tick=True
+ThirdPersonExampleMap_C.Replication=True
+ThirdPersonExampleMap_C.Input=True
+ThirdPersonExampleMap_C.Actor=True
+PointLight.TransformCommon=True
+PointLight.Light=True
+PointLight.Rendering=True
+PointLight.Lightmass=True
+PointLight.Performance=True
+PointLight.LightFunction=True
+PointLight.Light Profiles=True
+PointLight.DistanceFieldShadows=True
+PointLight.RayTracing=True
+PointLight.Tags=True
+PointLight.Cooking=True
+PointLight.Actor=True
+ThirdPersonCharacter_C.Default=True
+ThirdPersonCharacter_C.Tick=True
+PointLightComponent.TransformCommon=True
+PointLightComponent.Light=True
+PointLightComponent.Rendering=True
+PointLightComponent.Lightmass=True
+PointLightComponent.Performance=True
+PointLightComponent.LightFunction=True
+PointLightComponent.Light Profiles=True
+PointLightComponent.DistanceFieldShadows=True
+PointLightComponent.RayTracing=True
+PointLightComponent.Tags=True
+PointLightComponent.Cooking=True
+K2Node_VariableGet.Variable=True
+K2Node_VariableGet.DefaultValueCategory=True
+K2Node_VariableGet.Events=True
+LightSetup_C.Tick=True
+LightSetup_C.Rendering=True
+LightSetup_C.Replication=True
+LightSetup_C.Input=True
+LightSetup_C.Actor=True
+
+[MRU]
+MRUItem0=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
+
+[AssetEditorToolkitTabLocation]
+/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap.ThirdPersonExampleMap:PersistentLevel.ThirdPersonExampleMap=1
+/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter.ThirdPersonCharacter=1
+/Game/ThirdPersonBP/LightSetup.LightSetup=1
+
+[/Script/UnrealEd.BlueprintEditorOptions]
+bHideUnrelatedNodes=False
+
+[PlacementMode]
+RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
+
+[ContentBrowserRecent]
+MRUItem0=/Game/ThirdPersonBP/LightSetup
+MRUItem1=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
 
 
