--- a/EndlessRunnerGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/EndlessRunnerGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -181,6 +181,53 @@ LightSetup_C.Rendering=True
 LightSetup_C.Replication=True
 LightSetup_C.Input=True
 LightSetup_C.Actor=True
+SceneComponent.Variable=True
+SceneComponent.TransformCommon=True
+SceneComponent.Sockets=True
+SceneComponent.Rendering=True
+SceneComponent.Tags=True
+SceneComponent.ComponentReplication=True
+SceneComponent.Activation=True
+SceneComponent.Cooking=True
+SceneComponent.Events=True
+PointLightComponent.Variable=True
+PointLightComponent.Sockets=True
+PointLightComponent.ComponentReplication=True
+PointLightComponent.Events=True
+StaticMeshComponent.Variable=True
+StaticMeshComponent.TransformCommon=True
+StaticMeshComponent.Sockets=True
+StaticMeshComponent.StaticMesh=True
+StaticMeshComponent.Physics=True
+StaticMeshComponent.Collision=True
+StaticMeshComponent.Lighting=True
+StaticMeshComponent.Rendering=True
+StaticMeshComponent.VirtualTexture=True
+StaticMeshComponent.Tags=True
+StaticMeshComponent.ComponentReplication=True
+StaticMeshComponent.Cooking=True
+StaticMeshComponent.Events=True
+StaticMeshComponent.Materials=True
+LightSetup_C.TransformCommon=True
+BoxComponent.Variable=True
+BoxComponent.TransformCommon=True
+BoxComponent.Sockets=True
+BoxComponent.Shape=True
+BoxComponent.Navigation=True
+BoxComponent.Rendering=True
+BoxComponent.Physics=True
+BoxComponent.Collision=True
+BoxComponent.VirtualTexture=True
+BoxComponent.Tags=True
+BoxComponent.ComponentReplication=True
+BoxComponent.Cooking=True
+BoxComponent.Events=True
+BoolProperty.Variable=True
+BoolProperty.DefaultValueCategory=True
+K2Node_VariableSet.Variable=True
+K2Node_VariableSet.DefaultValueCategory=True
+IntProperty.Variable=True
+IntProperty.DefaultValueCategory=True
 
 [MRU]
 MRUItem0=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
@@ -194,10 +241,18 @@ MRUItem0=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
 bHideUnrelatedNodes=False
 
 [PlacementMode]
+RecentlyPlaced=/Game/ThirdPersonBP/LightSetup.LightSetup;
 RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
 
 [ContentBrowserRecent]
 MRUItem0=/Game/ThirdPersonBP/LightSetup
 MRUItem1=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
+
+[ContentBrowser]
+AssetPropertyPicker.ThumbnailSizeScale=0.100000
+AssetPropertyPicker.CurrentViewType=0
+
+[SuppressableDialogs]
+ChangeVariableType_Warning=False
 
 
